k8s/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: broadcast-api
spec:
  selector:
    app: broadcast-api
  ports:
    - port: 80
      targetPort: 3000
  type: ClusterIP
